--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "version": "1.0.0",
   "author": "@scimusmn",
   "dependencies": {
+    "@react-three/fiber": "^8.0.10",
     "dotenv": "^14.3.2",
     "gatsby": "^4.6.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-source-contentful": "7.3.2",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "three": "^0.139.2"
   },
   "devDependencies": {
     "chalk": "^4.1.2",
+    "contentful-management": "^9.0.0",
     "depcheck": "^1.4.3",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
