--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby-transformer-sharp": "^4.2.0",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.1.0",
+    "react-fps-stats": "^0.2.3",
     "react-helmet": "^6.1.0",
     "three": "^0.139.2"
   },
