--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-contentful": "7.3.2",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-transformer-sharp": "^4.2.0",
+    "gsap": "^3.10.4",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-dom": "^18.1.0",
