--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@react-three/drei": "^9.5.3",
     "@react-three/fiber": "^8.0.12",
+    "bootstrap": "^5.1.3",
     "dotenv": "^14.3.2",
     "gatsby": "^4.6.0",
     "gatsby-plugin-image": "^2.2.0",
@@ -19,9 +20,11 @@
     "gsap": "^3.10.4",
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "three": "^0.139.2"
+    "three": "^0.139.2",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "chalk": "^4.1.2",
