--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "three": "^0.139.2",
