--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-idle-timer": "^5.4.0",
     "three": "^0.139.2",
     "use-interval": "^1.4.0"
   },
