--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@react-three/drei": "^9.5.3",
     "@react-three/fiber": "^8.0.12",
+    "@ungap/structured-clone": "^1.0.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^14.3.2",
     "gatsby": "^4.6.0",
