--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-three/fiber": "^8.0.12",
     "@ungap/structured-clone": "^1.0.1",
     "bootstrap": "^5.1.3",
+    "chroma-js": "^2.4.2",
     "dotenv": "^14.3.2",
     "gatsby": "^4.6.0",
     "gatsby-plugin-image": "^2.2.0",
